# CodeExecutor

./: ByteData.cpp  ByteData.h  CMakeLists.txt  CodeExecutor.kdev4  CodeGeneratorBackend.cpp  CodeGeneratorBackend.h  DataTypes.h  ExecutableCommand.cpp  ExecutableCommand.h  ExecutionPlatform.cpp  ExecutionPlatform.h  Executor.cpp  Executor.h  InstructionEmitter.cpp  InstructionEmitter.h  JitCompiler.cpp  JitCompiler.h  JitPlatform.cpp  JitPlatform.h  codeblock.cpp  codeblock.h  commands.cpp  commands.h  executor-stack_variables.cpp  executor-stack_variables.h  main.cpp
